# Message-Passing-Interface

./: CMakeLists.txt  cmd  data_zeus.ipynb  mpi_hello_proc.c  mpi_pi_batch_processing_Sc_NonSc.sh  mpi_pi_reduce.c  mpi_pi_sequential.c  mpi_scatter_gather.c  mpi_testing_buffered_send_throughput.c  mpi_testing_communication_delay.c  mpi_testing_scatter_gather.c  mpi_testing_standard_send_throughput.c  mpi_testing_various_p2p_communication_methods.c
lab3/: czasy wykonania równoległego.txt  mpi_pi_reduce.c
lab4/: NonSc_Sc.ipynb  data.ipynb  mpi_pi_batch_processing.sh  mpi_pi_batch_processing_SCALABLE.sh  mpi_pi_batch_processing_Sc_NonSc.sh  mpi_pi_reduce.c  non_scalable.csv  scalable.csv
lab4a/: mpi_pi_batch_processing_Sc_NonSc.sh
lab4a/2 rozmiar problemu rośnie (eksperyment skalowalny)/: mpi_pi_batch_processing_SCALABLE.sh
lab4b/: NonSc_Sc.ipynb  mpi_pi_batch_processing_Sc_NonSc.sh
spr1/: mpi_testing_standard_send_throughput.c  pomiary.ods
